# epub-recipe-parser

./: .gitignore  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_READY_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  INTEGRATION_TEST_REPORT.md  LICENSE  MIGRATION.md  MODERNIZATION_CODE_EXAMPLES.md  MODERNIZATION_SUMMARY.md  OBSIDIAN_EXPORT_FEATURE.md  PERFORMANCE_ANALYSIS.md  PROJECT_STATUS.md  README.md  README_MODERNIZATION.md  TRANSITION_SUMMARY.md  pyproject.toml  run_integration_tests.py
docs/: SETUP.md
docs/development/: ACTIONABLE_IMPROVEMENTS.md  ACTION_PLAN.md  BUG_FIXES_SUMMARY.md  BUG_FIXES_VALIDATION_REPORT.md  BUG_REPORT_ROUND_2.md  CHANGES_SUMMARY.md  DATA_STORAGE_IMPROVEMENT_PLAN.md  DATA_STORAGE_IMPROVEMENT_PLAN_REVIEW.md  FIXES_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_COMPLETE.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_REVIEW.md  IMPROVEMENT_PLAN_VERDICT.md  INGREDIENT_EXTRACTION_IMPROVEMENTS.md  INSTRUCTION_IMPROVEMENTS_SUMMARY.md  OPTIMIZATION_QUICK_GUIDE.md  RE-EXTRACTION_RESULTS.md  RESEARCH_INDEX.md  RESEARCH_SUMMARY.md  SCALING_RESEARCH_REPORT.md  TECHNOLOGY_COMPARISON.md  TITLE_EXTRACTION_FIX.md  TITLE_FIX_SUMMARY.md
examples/: obsidian_export_example.md
scripts/: benchmark_performance.py  multiprocessing_implementation.py  validate_improvements.py
src/epub_recipe_parser/: __init__.py
src/epub_recipe_parser/analyzers/: __init__.py  structure.py  toc.py
src/epub_recipe_parser/cli/: __init__.py  main.py
src/epub_recipe_parser/core/: __init__.py  extractor.py  models.py  protocols.py  quality.py  validator.py
src/epub_recipe_parser/exporters/: __init__.py  obsidian.py
src/epub_recipe_parser/extractors/: __init__.py  ingredients.py  instructions.py  (+1 more)
tests/: __init__.py  conftest.py
tests/integration/: README.md  __init__.py
tests/test_exporters/: __init__.py
tests/test_extractors/: __init__.py
(+22 files in other folders)
