[project]
name = "epub-recipe-parser"
version = "3.0.0"
description = "Extract structured recipe data from EPUB cookbook files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["epub", "recipes", "cookbook", "parser", "extraction"]
authors = [
    {name = "EPUB Recipe Parser Contributors", email = "epub-recipe-parser@example.com"}
]
maintainers = [
    {name = "EPUB Recipe Parser Contributors", email = "epub-recipe-parser@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]

dependencies = [
    "ebooklib>=0.20",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
epub-parser = "epub_recipe_parser.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epub_recipe_parser"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "ebooklib.*"
ignore_missing_imports = true
